Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-632

Constants of enum types don't behave well

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.2
    • 0.3
    • Java - Compiler
    • None

    Description

      It turns out that THRIFT-551 missed the case of constants defined of enum types.

      Attachments

        1. thrift-632.patch
          4 kB
          Bryan Duxbury
        2. thrift-632-v2.patch
          6 kB
          Bryan Duxbury
        3. thrift-632-v3.patch
          10 kB
          Bryan Duxbury
        4. thrift-632-v4.patch
          10 kB
          Bryan Duxbury
        5. thrift-632-v5.patch
          13 kB
          Bryan Duxbury
        6. thrift-632-v6.patch
          12 kB
          Bryan Duxbury
        7. thrift-632-v7.patch
          13 kB
          Bryan Duxbury
        8. thrift-632-v8.patch
          14 kB
          Bryan Duxbury
        9. thrift-632-v9.patch
          15 kB
          Bryan Duxbury

        Activity

          People

            bryanduxbury Bryan Duxbury
            bryanduxbury Bryan Duxbury
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: